iac/staging/03-services-01-backend-02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: viteezy-staging
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: backend
      terminationGracePeriodSeconds: 120
      containers:
        - name: backend
          image: europe-docker.pkg.dev/viteezy/backend/docker:${backend}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
          startupProbe:
            httpGet:
              path: /health-check?type=alive
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 30
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /health-check?type=alive
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 1
          resources:
            requests:
              memory: 768Mi
              cpu: 100m
            limits:
              memory: 1500Mi
              cpu: 1
          volumeMounts:
            - name: viteezy-staging-secret-volume
              readOnly: true
              mountPath: "/etc/viteezy-staging-secret-volume"
      volumes:
      - name: viteezy-staging-secret-volume
        secret:
          secretName: viteezy-staging-secrets
