iac/staging/03-services-02-frontend-02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: viteezy-staging
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: frontend
      terminationGracePeriodSeconds: 120
      containers:
        - name: frontend
          image: europe-docker.pkg.dev/viteezy/frontend/docker:${frontend}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
