iac/staging/03-services-03-dashboard-02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: viteezy-staging
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      imagePullSecrets:
        - name: my-ecr-secret
      terminationGracePeriodSeconds: 120
      containers:
        - name: dashboard
          image: europe-docker.pkg.dev/viteezy/dashboard/docker:${dashboard}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
