iac/staging/02-thirdparty-01-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-backend-service
  namespace: viteezy-staging
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Endpoints
metadata:
  name: db-backend-service
  namespace: viteezy-staging
subsets:
  - addresses:
      - ip: 10.102.0.3
    ports:
      - port: 3306
